--- a/package.json
+++ b/package.json
@@ -8,9 +8,27 @@
 	"module": "./source/engine/main.js",
 	"repository": "github:kovacsv/Online3DViewer",
 	"keywords": [
-		"3d", "viewer", "cad",
-		"obj", "3ds", "stl", "ply", "gltf", "glb", "off", "3dm", "fbx",
-		"dae", "wrl", "3mf", "ifc", "brep", "step", "iges", "fcstd", "bim"
+		"3d",
+		"viewer",
+		"cad",
+		"obj",
+		"3ds",
+		"stl",
+		"ply",
+		"gltf",
+		"glb",
+		"off",
+		"3dm",
+		"fbx",
+		"dae",
+		"wrl",
+		"3mf",
+		"ifc",
+		"brep",
+		"step",
+		"iges",
+		"fcstd",
+		"bim"
 	],
 	"files": [
 		"build/o3dv.min.js",
@@ -40,12 +58,12 @@
 	},
 	"devDependencies": {
 		"clean-css-cli": "^5.6.1",
-		"docdash": "^1.2.0",
 		"esbuild": "^0.16.7",
 		"eslint": "^8.29.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"fantasticon": "^1.2.2",
 		"http-server": "^14.0.0",
+		"ink-docstrap": "^1.3.2",
 		"jsdoc": "^3.6.11",
 		"mocha": "^10.2.0",
 		"oslllo-svg-fixer": "^2.2.0",
@@ -55,10 +73,10 @@
 		"@simonwep/pickr": "1.8.2",
 		"draco3d": "1.5.5",
 		"fflate": "0.7.4",
+		"occt-import-js": "0.0.14",
 		"rhino3dm": "7.15.0",
 		"three": "0.147.0",
-		"web-ifc": "0.0.35",
-		"occt-import-js" : "0.0.14"
+		"web-ifc": "0.0.35"
 	},
 	"eslintConfig": {
 		"env": {
@@ -75,7 +93,7 @@
 			"DracoDecoderModule": "readonly",
 			"rhino3dm": "readonly",
 			"WebIFC": "readonly",
-			"occtimportjs" : "readonly"
+			"occtimportjs": "readonly"
 		},
 		"parserOptions": {
 			"ecmaVersion": 12,
